--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="icon" type="image/png" href="/src/assets/images/logo.png">
+  <!-- <link rel="icon" type="image/png" href="/src/assets/images/logo.png"> -->
 </head>
 <body>
   <app-root></app-root>
